--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -1,36 +1,48 @@
-.contact {
+.item {
     display: flex;
-    border: 1px solid #727272;
-    border-radius: 10px;
-    padding: 10px;
     justify-content: space-between;
-    margin-bottom: 10px;
-    width: 250px;
+    align-items: center;
+    width: 300px;
+    padding: 10px;
+    border: 1px solid #0d47a1;
+    border-radius: 8px;
+    font-size: 18px;
+}
+
+.info {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.name,
+.number {
+    display: flex;
+    align-items: center;
 }
 
 .icon {
     margin-right: 5px;
 }
 
-.name {
-    margin: 0 auto;
-    display: flex;
-    justify-content: flex-start;
-}
-
-.number {
-    margin: 0 auto;
-    display: flex;
-    justify-content: flex-start;
-}
-
 .button {
-    padding: 0 5px;
-    border: 1px solid #726161;
-    font-size: 15px;
-    width: 80px;
+    width: 60px;
     height: 30px;
-    background-color: #d6d0d0;
+    border: none;
+    border-radius: 8px;
+    background-color: #bbdefb;
+}
 
+.button:hover,
+.button:focus {
+    cursor: pointer;
+    background-color: #2196f3;
+    color: #fff;
+    transition: cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
 
+.buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
 }
