--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -1,7 +1,26 @@
-.searchBar {
+.filter {
     display: flex;
     flex-direction: column;
-    margin-bottom: 30px;
-    width: 250px;
+    align-items: center;
+    gap: 10px;
+    max-width: 250px;
+    margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 18px;
+}
 
+.input {
+    padding: 10px;
+    width: 250px;
+    border: 1px solid #0d47a1;
+    border-radius: 8px;
+}
+
+.input:focus {
+    cursor: pointer;
+    background-color: #bbdefb;
+    color: #111;
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    transition: cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
